<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.skjolberg.nfc.external.client.MainActivity" >

    <item
        android:id="@+id/action_start_service"
        android:showAsAction="always"
        android:title="@string/startService"
        android:visible="false"
        android:icon="@android:drawable/ic_media_play"
        />
        
	<item
        android:id="@+id/action_stop_service"
        android:showAsAction="always"
        android:title="@string/stopService"
        android:visible="false"
        android:icon="@android:drawable/ic_media_pause"
        />
            
    <item
        android:id="@+id/action_ndef_format"
        android:showAsAction="withText"
        android:title="@string/ndefFormat"/>

    <item
        android:id="@+id/action_ndef_write"
        android:showAsAction="withText"
        android:title="@string/ndefWrite"/>
    
</menu>
