<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/handoverRequest"
		android:padding="3dip"
        android:textColor="@color/ndefText"
		android:textStyle="bold"
	/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestMajorVersion"
				android:textColor="@color/ndefText"
                />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/handoverRequestMajorVersionValue"
				android:textColor="@color/ndefText"
            />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestMinorVersion"
				android:textColor="@color/ndefText"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/handoverRequestMinorVersionValue"
				android:textColor="@color/ndefText"
                 />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestCollisionResolution"
				android:textColor="@color/ndefText"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/handoverRequestCollisionResolutionValue"
				android:textColor="@color/ndefText"
                 />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/handoverRequestAlternativeCarriers"
				android:textColor="@color/ndefText"
                 />

            <TextView
                android:gravity="left"
                android:padding="3dip"
        	    android:id="@+id/handoverRequestAlternativeCarriersValue"
				android:textColor="@color/ndefText"
                 />
        </TableRow>
        
    </TableLayout>
    
    
</LinearLayout>
